ffi/poc/cpp/corpus/include/ak_abi.h

/* ---- section 4: common vocabulary (plan.FIXED) --------------------------------- */
typedef struct ak_enc_ctx ak_enc_ctx;
typedef struct ak_dec_ctx ak_dec_ctx;
/* ABI v1 section 4: source code units -> UTF-8 into dst; returns bytes written or an error. */
typedef int32_t (*ak_transcode_fn)(const void *src, size_t len, uint8_t *dst, int32_t cap, ak_grow_fn grow, void *sink);
/* ABI v1 section 3: the host's log sink. */
typedef void (*ak_log_fn)(void *ctx, uint32_t level, const uint8_t *msg, size_t msg_len);
/* ak_init's out-parameter (ABI v1 section 3/5): a code and a detail. */
struct ak_err {
  int32_t code;
  uint32_t detail;
};
typedef struct ak_err ak_err;
/* ak_init's options (ABI v1 section 3). */
struct ak_init_opts {
  uint32_t abi_version;
  uint32_t flags;
  ak_log_fn log;
  void *log_ctx;
};
typedef struct ak_init_opts ak_init_opts;
/* README R5: boundary-call counts, counted in the CORE (zero unless the core is a counting build). */
struct AkCounters {
  uint64_t forward;
  uint64_t reverse;
  uint64_t transcode;
  uint64_t prefix_moves;
  uint64_t prefix_bytes;
  uint64_t grows;
};
typedef struct AkCounters AkCounters;
/* ---- the fixed entry points (plan.FIXED.functions) ----------------------------- */
/* lifecycle */
/* Once per process, before anything else (plan.lifecycle). */
int32_t ak_init(const struct ak_init_opts *opts, struct ak_err *err);
/* 1 once ak_init has returned successfully. */
int32_t ak_initialized(void);
/* A NUL-terminated build id. */
const char *ak_build_id(void);
/* Test hook: one line through the installed log bridge. */
int32_t ak_log_test(uint32_t level, const uint8_t *msg, size_t len);
/* Test hook: a panic inside the core. */
void ak_panic_test(void);
/* context */
uint32_t ak_abi_version(void);
ak_enc_ctx *ak_enc_ctx_new(void);
void ak_enc_ctx_free(ak_enc_ctx *ctx);
/* Clears the buffer and the sticky slot. */
void ak_enc_reset(ak_enc_ctx *ctx);
/* Borrow what the context has encoded, valid until the next reset; returns the status. */
int32_t ak_enc_take(ak_enc_ctx *ctx, const uint8_t * *ptr, size_t *len);
void ak_dec_ctx_free(ak_dec_ctx *ctx);
/* error */
/* Sticky, first error wins; takes either context (ABI v1 section 5). */
void ak_fail(void *ctx, int32_t code, const uint8_t *msg, uint32_t msg_len);
int32_t ak_enc_err(const ak_enc_ctx *ctx);
int32_t ak_dec_err(const ak_dec_ctx *ctx);
void ak_dec_err_reset(ak_dec_ctx *ctx);
/* transcode */
/* UTF-8, validate and refuse. */
ak_transcode_fn ak_tc_utf8(void);
/* UTF-8, no validation. */
ak_transcode_fn ak_tc_utf8_trusted(void);
/* UTF-8, SIMD validator. */
ak_transcode_fn ak_tc_utf8_simd(void);
/* bytes: a copy. */
ak_transcode_fn ak_tc_bytes(void);
/* UTF-16 code units -> UTF-8. */
ak_transcode_fn ak_tc_utf16(void);
/* Latin-1 bytes -> UTF-8. */
ak_transcode_fn ak_tc_latin1(void);
/* counters */
void ak_enc_counters(const ak_enc_ctx *ctx, struct AkCounters *out);
/* Counting build: the HOST reports a reverse crossing the core cannot see. */
void ak_enc_count_reverse(ak_enc_ctx *ctx);
void ak_enc_counters_reset(ak_enc_ctx *ctx);
void ak_dec_counters(const ak_dec_ctx *ctx, struct AkCounters *out);
void ak_dec_counters_reset(ak_dec_ctx *ctx);
size_t ak_enc_site_moves(const ak_enc_ctx *ctx, uint32_t *out, size_t cap);
/* noop */
/* A crossing and nothing else. */
uint64_t ak_noop(uint64_t x);
/* An identical twin of ak_noop. */
uint64_t ak_noop2(uint64_t x);
/* ak_noop with the init guard. */
uint64_t ak_noop_guarded(uint64_t x);
/* One forward and one reverse crossing. */
uint64_t ak_noop_reverse(uint64_t (*f)(uint64_t), uint64_t x);
/* pull */
int32_t ak_bdr_reserve(ak_dec_ctx *ctx, size_t bytes);
size_t ak_bdr_footprint(const ak_dec_ctx *ctx);
intptr_t ak_bdr_drain(ak_dec_ctx *ctx, uint8_t *dst, size_t cap, size_t *cursor);
int32_t ak_bdr_ptr(ak_dec_ctx *ctx, const uint8_t * *ptr, size_t *len);